--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: aplicacion_taller
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 publish_to: 'none'
 version: 0.1.0
 
@@ -12,9 +12,11 @@ dependencies:
   firebase_core: ^2.31.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_riverpod: ^2.5.1
   go_router: ^14.0.2
-  intl: ^0.19.0
+  intl: 0.18.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
