--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cloud_firestore: ^4.17.3
   firebase_auth: ^4.19.5
   firebase_core: ^2.31.0
+  fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
