--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   go_router: ^14.0.2
-  intl: 0.19.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
